# doosan_rokey_8_project_cobot_1

./: README.md
src/bartender_interfaces/: CMakeLists.txt  package.xml
src/bartender_interfaces/msg/: Menu.msg  Status.msg
src/cobotender/: package.xml  setup.cfg  setup.py
src/cobotender/cobotender/: app.py  bartender.py  bartender_admin_control_bridge.py
src/cobotender/cobotender/database/: bar.db
src/cobotender/database/: bar.db
src/cobotender/launch/: cobotender.launch.py
src/cobotender/static/css/: admin.css  customer.css
src/cobotender/static/js/: admin.js  customer.js
src/cobotender/templates/: admin.html  admin_login.html  customer.html  inventory.html  orders.html
